--- a/style.css
+++ b/style.css
@@ -1,49 +1,84 @@
 html {
-    background: #e3e3e3;
-}
+  background: #e3e3e3; }
 
 body {
-font-family: Arial, Helvetica, sans-serif;
-margin: 40px;
-padding: 40px;
-color: #242424; 
-border-top: 10px solid #242424;
-background: #fff;
-}
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 40px;
+  padding: 40px;
+  color: #242424;
+  border-top: 10px solid #242424;
+  background: #fff; }
 
 h1 {
-font-size: 3em;
-margin: 0;
-}
+  font-size: 3em;
+  margin: 0; }
 
 p {
-line-height: 1.4em;
-margin: 40px;
-}
+  line-height: 1.4em;
+  margin: 40px; }
 
 #blog {
-border-top: 1px dotted #ccc;
-}
+  border-top: 1px dotted #ccc; }
 
 .blog-post {
-border-bottom: 1px dotted #ccc;
-}
+  border-bottom: 1px dotted #ccc; }
 
 article {
-    border-bottom: 1px soild #000;
-}
+  border-bottom: 1px solid #000; }
 
-.sticky, .blog-post{
-    color: white;
-    padding: 20px;
-}
+.sticky, .blog-post {
+  color: white;
+  padding: 20px; }
 
-.sticky{
-    background:green;
-}
+.sticky {
+  background: green; }
 
-.blog-post{
-    background:blue;
-    position:relative;
-    left:20px;
-}
+.blog-post {
+  background: blue;
+  position: relative;
+  left: 20px; }
+
+.blog-post {
+  display: flex; }
+  .blog-post .intro p {
+    font-size: 18px;
+    margin: 17px 20px;
+    font-weight: 400; }
+
+.story {
+  position: relative; }
+  .story .story-title {
+    position: absolute;
+    width: 99%;
+    left: 0;
+    bottom: 3px;
+    height: 40px;
+    line-height: 40px;
+    padding-left: 1%;
+    background: rgba(0, 0, 0, 0.5); }
+
+table {
+  border-collapse: collapse;
+  border: 1px solid #ddd;
+  max-width: 1000px;
+  width: 100%;
+  line-height: 30px;
+  margin-bottom: 30px; }
+  table tr {
+    display: flex; }
+    table tr th:first-of-type {
+      width: 200px; }
+    table tr th:nth-of-type(2) {
+      flex: 1; }
+    table tr th:last-of-type {
+      width: 200px; }
+    table tr td {
+      border-collapse: collapse;
+      border: 1px solid #eee;
+      text-align: center; }
+      table tr td:first-of-type {
+        width: 200px; }
+      table tr td:nth-of-type(2) {
+        flex: 1; }
+      table tr td:last-of-type {
+        width: 200px; }
